# VideoPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
config/: imgui.ini
configs/: imgui.ini  style.ini  url.ini
include/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
jpg/: README.md
res/: app_win32.aps  app_win32.rc  icon.aps  icon.rc
res/shaders/: Basic.shader
src/: Application.cc  Application.h  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TimeStamp.cc  TimeStamp.h  VertexArray.cpp  VertexBuffer.cpp  log.cc  log.h  main.cc  main.cpp  resource.h
src/Core/: Application.cc  Application.h  Layer.h  MThread.cc  MThread.h  MTimer.cpp  MTimer.h  Scene.cc  Scene.h  log.cc  log.h
src/Graphics/Buffers/: FrameBuffer.cc  FrameBuffer.h  IndexBuffer.cc  IndexBuffer.h  VertexArray.cc  VertexArray.h  VertexBuffer.cc  VertexBuffer.h
src/Graphics/Renderer/: Camera.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  Texture.cc  Texture.h
src/Ui/: LogLayer.cc  LogLayer.h  MainLayer.cc  MainLayer.h  VideoLayer.cc  VideoLayer.h
src/Utils/: CreateFileDir.cc  CreateFileDir.h  ImGuiFileDialog.cpp  StyleManager.cc  StyleManager.h  Utils.h
src/VIdeo/: MThread.cc  MThread.h  Texture.cc  VideoCapture.cpp  VideoView.cc  VideoView.h
src/Video/: MThread.cc  MThread.h  Texture.cc  Texuture.h  VideoCapture.cpp  VideoCapture.h  VideoPackage.cpp  VideoPackage.h  VideoThread.cpp  VideoThread.h  VideoView.cc  VideoView.h  VodePackage.cpp
src/video_reader/: video_reader.cpp  video_reader.h
thirdlib/UNIX/FFmpeg/: CMakeLists.txt
